# Bedrock-Insights

./: .gitignore  CMakeLists.txt  README.md
BedrockAtlas/: CMakeLists.txt  README.md
BedrockAtlas/src/minimap/: minimapRenderer.cpp  minimapRenderer.h
